Refactor tříd -odstranění a doladění detailů -přidání komentářů a referencí k potřebným metodám